# CubeEngine

./: .gitignore  CMakeLists.txt  DebugTools.hpp  LICENSE  README.md  VkTutorial(common_vk).sln  VkTutorial(common_vk).vcxproj  VkTutorial(common_vk).vcxproj.filters  main.cpp  packages.config  shader_compiler.py
Engine/: CMakeLists.txt  main.cpp
Engine/common_dx/: CMakeLists.txt
Engine/common_dx/include/: DXComputeBuffer.hpp  DXConstantBuffer.hpp  DXDescriptor.hpp  DXHekper.hpp  DXHelper.hpp  DXImGuiManager.hpp  DXIndexBuffer.hpp  DXInit.hpp  DXInitializer.hpp  DXMeshPipeLine.hpp  DXMipmapGenerator.hpp  DXPipeLine.hpp  DXRenderTarget.hpp  DXSkybox.hpp  DXStructuredBuffer.hpp  DXSwapChain.hpp  DXTexture.hpp  DXVertexBuffer.hpp  DXWorkGraphsStateObject.hpp  VKIndexBuffer.hpp  VKShader.hpp  VKSkybox.hpp  VKTexture.hpp  VKUniformBuffer.hpp  VKVertexBuffer.hpp
Engine/common_dx/source/: DXComputeBuffer.cpp  DXDescriptor.cpp  DXHelper.cpp  DXImGuiManager.cpp  DXIndexBuffer.cpp  DXInitializer.cpp  DXMeshPipeLine.cpp  DXMipmapGenerator.cpp  DXPipeLine.cpp  DXRenderTarget.cpp  DXShader.cpp  DXSkybox.cpp  DXStructuredBuffer.cpp  DXSwapChain.cpp  DXTexture.cpp  DXVertexBuffer.cpp  DXWorkGraphsStateObject.cpp  VKIndexBuffer.cpp  VKSkybox.cpp  VKTexture.cpp  VkInit.cpp
Engine/common_gl/: CMakeLists.txt
Engine/common_gl/include/: GLImGuiManager.hpp  GLIndexBuffer.hpp  GLMaterial.hpp  GLRenderManager.hpp  GLShader.hpp  GLSkybox.hpp  GLTexture.hpp  GLUniformBuffer.hpp  GLVertexArray.hpp  GLVertexBuffer.hpp  Vertex.hpp  dummy_gl.hpp  glCheck.hpp
Engine/common_gl/source/: GLImGuiManager.cpp  GLIndexBuffer.cpp  GLRenderManager.cpp  GLShader.cpp  GLSkybox.cpp  GLTexture.cpp  GLUniformBuffer.cpp  GLVertexArray.cpp  GLVertexBuffer.cpp  glCheck.cpp
Engine/common_vk/: CMakeLists.txt
Engine/common_vk/include/: VKDescriptor.hpp  VKHelper.hpp  VKImGuiManager.hpp  VKIndexBuffer.hpp  VKInit.hpp  VKMaterial.hpp  VKPipeLine.hpp  VKRenderManager.hpp  VKRenderTarget.hpp  VKShader.hpp  VKSkybox.hpp  VKSwapChain.hpp  VKTexture.hpp  VKUniformBuffer.hpp  VKVertexBuffer.hpp  Vertex.hpp
Engine/common_vk/source/: VKDescriptor.cpp  VKImGuiManager.cpp  VKIndexBuffer.cpp  VKPipeLine.cpp  VKRenderManager.cpp  VKRenderTarget.cpp  VKShader.cpp  VKSkybox.cpp  VKSwapChain.cpp  VKTexture.cpp  VKVertexBuffer.cpp  VkInit.cpp
Engine/include/: Animation.hpp  BufferWrapper.hpp  Camera.hpp  CameraManager.hpp  CollisionMode.hpp  Component.hpp  ComponentTypes.hpp  DX2DRenderContext.hpp  DXCommandListWrapper.hpp  DXForwardRenderContext.hpp  DXGBufferContext.hpp  DXGlobalLightingContext.hpp  DXLightingContext.hpp  DXLocalLightingContext.hpp  DXNaiveLightingContext.hpp  DXPostProcessContext.hpp  DXRenderManager.hpp  DXSSAOContext.hpp  DXShadowMapContext.hpp  DXSkyboxRenderContext.hpp  DXWorkGraphsContext.hpp  DebugLogger.hpp  Engine.hpp  FidelityFX.hpp  GLRenderManager.hpp  GameState.hpp  GameStateManager.hpp  IComponent.hpp  IWorkGraphsContext.hpp  ImGuiManager.hpp  InputManager.hpp  JobSystem.hpp  Logger.hpp  Material.hpp  Object.hpp  ObjectManager.hpp  PhysicsManager.hpp  Ray.hpp  RenderManager.hpp  SoundManager.hpp  (+7 more)
Engine/include/BasicComponents/: DynamicSprite.hpp  ISprite.hpp  Light.hpp  MaterialComponent.hpp  Physics2D.hpp  Physics3D.hpp  SkeletalAnimationStateMachine.hpp  SkeletalAnimator.hpp  Sprite.hpp  StaticSprite.hpp
Engine/include/DebugTools/: DebugTools.hpp  NsightAftermathShaderDatabase.h  stdafx.h
Engine/include/Interface/: ICommandListWrapper.hpp  IComponent.hpp  IRenderContext.hpp  ISprite.hpp  IWorkGraphsContext.hpp
Engine/include/Particle/: Particle.hpp  ParticleManager.hpp
Engine/include/SkeletalAnimation/: SkeletalAnimation.hpp  SkeletalBone.hpp
Engine/libs/Profiler/: CMakeLists.txt
Engine/libs/SDL3-3.2.16/: REVISION.txt
Engine/libs/assimp/: assimp-vc143-mtd.lib
Engine/shader/: 2D.frag  2D.vert  2D.vert.spv  3D.frag  3D.frag.spv  3D.vert  3D.vert.spv  BRDF.frag  BRDF.vert  Cubemap.vert  Equirectangular.frag  Equirectangular.frag.spv  Geometry3D.frag  Geometry3D.frag.spv  Irradiance.frag  Irradiance.frag.spv  Irradiance.vert  Lighting3D.frag  Lighting3D.frag.spv  Lighting3D.vert  Lighting3D.vert.spv  Normal3D.frag  Normal3D.vert  Normal3D.vert.spv  OpenGL2D.frag  OpenGL2D.vert  OpenGL3D.frag  OpenGL3D.vert  OpenGLNormal3D.frag  OpenGLNormal3D.vert  Prefilter.frag  Prefilter.frag.spv  Skybox.frag  Skybox.frag.spv  Skybox.vert  Skybox.vert.spv  Vulkan2D.frag  Vulkan2D.frag.spv  Vulkan2D.vert  Vulkan2D.vert.spv  (+19 more)
Engine/shaders/cso/: 2D.frag.cso  2D.vert.cso  3D.frag.cso  3D.mesh.cso  3D.vert.cso  3DMesh.frag.cso  BRDF.frag.cso  Cubemap.vert.cso  Equirectangular.frag.cso  GBufferMesh.frag.cso  Irradiance.frag.cso  Normal3D.frag.cso  Normal3D.vert.cso  Prefilter.frag.cso  Skybox.frag.cso  Skybox.vert.cso  WorkGraphs.cso  (+3 more)
Engine/source/: Animation.cpp  BufferWrapper.cpp  Camera.cpp  CameraManager.cpp  DX2DRenderContext.cpp  DXForwardRenderContext.cpp  DXGBufferContext.cpp  DXGlobalLightingContext.cpp  DXLightingContext.cpp  DXLocalLightingContext.cpp  DXNaiveLightingContext.cpp  DXPostProcessContext.cpp  DXRenderManager.cpp  DXSSAOContext.cpp  DXShadowMapContext.cpp  DXSkyboxRenderContext.cpp  DXWorkGraphsContext.cpp  DebugLogger.cpp  Engine.cpp  FidelityFX.cpp  GLRenderManager.cpp  GameStateManager.cpp  ImGuiManager.cpp  InputManager.cpp  JobSystem.cpp  Logger.cpp  Object.cpp  ObjectManager.cpp  PhysicsManager.cpp  RenderManager.cpp  SoundManager.cpp  SpriteManager.cpp  Texture.cpp  ThreadManager.cpp  Utility.cpp  VKRenderManager.cpp  Window.cpp  WorkGraphs.cpp
Game/: CMakeLists.txt
Game/assets/: character_front.anm  player.spt
Game/include/: 3DPhysicsDemo.hpp  Background.hpp  GameLevelType.hpp  MultipleLights.hpp  ObjectType.hpp  OpenGLDemo.hpp  PBR.hpp  ProceduralMeshes.hpp  SkeletalAnimationDemo.hpp  VerticesDemo.hpp
Game/levels/: ShaderDemo.cpp  ShaderDemo.hpp  VerticesDemo.cpp  VerticesDemo.hpp
Game/source/: 3DPhysicsDemo.cpp  Background.cpp  MultipleLights.cpp  OpenGLDemo.cpp  PBR.cpp  ProceduralMeshes.cpp  SkeletalAnimationDemo.cpp  VerticesDemo.cpp
Shader/: vertex.vert  (+3 more)
(+306 files in other folders)
